# infowiki

./: .gitignore  Cargo.toml  README.md  config.json  dbinit.py  requirements.txt  wsgi.py
config/: config.json
config/templates/: _header.lish  page.lish
config/templates/setup/: _header.lish  page.lish
netwiki/: __init__.py  config.py  routes.py  views.py
netwiki/data/: mysql.py
netwiki/db/: init.sql
netwiki/templates/: _footer.lish  _header.lish  edit.lish  page.lish
netwiki/templates/styling/: base.lisc
src/: lib.rs  main.rs
src/db/: mod.rs
src/namespaces/: mod.rs  setup.rs  wiki.rs
styling/: README.md
