[package]
name = "netwiki"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8.2", features = [ "runtime-tokio" ] }
log = "0.4.22"
lysine = { git = "https://github.com/ctcl-bregis/lysine-rs.git" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"